; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_fold-const.c_omit_two_operands.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_fold-const.c_omit_two_operands.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@COMPOUND_EXPR = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @omit_two_operands(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @fold_convert(i32 %10, i32 %11)
  store i32 %12, i32* %9, align 4
  %13 = load i32, i32* %8, align 4
  %14 = call i64 @TREE_SIDE_EFFECTS(i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %22

16:                                               ; preds = %4
  %17 = load i64, i64* @COMPOUND_EXPR, align 8
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* %8, align 4
  %20 = load i32, i32* %9, align 4
  %21 = call i32 @build2(i64 %17, i32 %18, i32 %19, i32 %20)
  store i32 %21, i32* %9, align 4
  br label %22

22:                                               ; preds = %16, %4
  %23 = load i32, i32* %7, align 4
  %24 = call i64 @TREE_SIDE_EFFECTS(i32 %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %32

26:                                               ; preds = %22
  %27 = load i64, i64* @COMPOUND_EXPR, align 8
  %28 = load i32, i32* %5, align 4
  %29 = load i32, i32* %7, align 4
  %30 = load i32, i32* %9, align 4
  %31 = call i32 @build2(i64 %27, i32 %28, i32 %29, i32 %30)
  store i32 %31, i32* %9, align 4
  br label %32

32:                                               ; preds = %26, %22
  %33 = load i32, i32* %9, align 4
  %34 = call i64 @TREE_CODE(i32 %33)
  %35 = load i64, i64* @COMPOUND_EXPR, align 8
  %36 = icmp ne i64 %34, %35
  br i1 %36, label %37, label %40

37:                                               ; preds = %32
  %38 = load i32, i32* %9, align 4
  %39 = call i32 @non_lvalue(i32 %38)
  br label %42

40:                                               ; preds = %32
  %41 = load i32, i32* %9, align 4
  br label %42

42:                                               ; preds = %40, %37
  %43 = phi i32 [ %39, %37 ], [ %41, %40 ]
  ret i32 %43
}

declare dso_local i32 @fold_convert(i32, i32) #1

declare dso_local i64 @TREE_SIDE_EFFECTS(i32) #1

declare dso_local i32 @build2(i64, i32, i32, i32) #1

declare dso_local i64 @TREE_CODE(i32) #1

declare dso_local i32 @non_lvalue(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
